--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
 img {
     width: 100%;
 }
+
+
 .first_page_container .head {
     padding: 12em 0 0 0;
 }
@@ -61,10 +63,9 @@ img {
 
 .first_page_SECOND__section .content {
     display: flex;
-    justify-content: flex-end ;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    height: 30vh;
+    height: 60vh;
 }
 .first_page_SECOND__section h1 {
     font-size: 3em;
@@ -160,6 +161,7 @@ img {
     /* second section */
     .first_page_SECOND__section h1 {
         font-size: 2.8em;
+        height: -10em;
     }
     
     /* Third section */
