--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@
 img {
     width: 100%;
 }
-
-
 .first_page_container .head {
     padding: 12em 0 0 0;
 }
@@ -31,15 +29,13 @@ img {
 }
 .first_page_container  p {
     margin-top: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     max-width: 40em;
     text-align: center;
     font-size: 1.2em;
     color: rgba(0, 0, 0, 0.671);
-}
-.first_page_container .head  span {
-    text-transform: uppercase;
-    font-size:.75em;
-    font-weight: 500;
 }
 .first_page_container a  {
     margin-top: 7em;
@@ -63,9 +59,10 @@ img {
 
 .first_page_SECOND__section .content {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end ;
     align-items: center;
-    height: 60vh;
+    flex-direction: column;
+    height: 30vh;
 }
 .first_page_SECOND__section h1 {
     font-size: 3em;
@@ -161,7 +158,6 @@ img {
     /* second section */
     .first_page_SECOND__section h1 {
         font-size: 2.8em;
-        height: -10em;
     }
     
     /* Third section */
