--- a/CSS/DayOff.css
+++ b/CSS/DayOff.css
@@ -5,13 +5,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-body {
+/* body {
     background-image: url(../images/65yo.png);
     background-repeat: no-repeat;
     background-position: right;
     background-position-y: top;
     background-size: contain;
-}
+    -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+   
+} */
 
 .bonus_head  {
     padding-top: 10em;
@@ -79,6 +82,10 @@ body {
     img {
         width: 75px;
     }
+}
+
+iframe {
+    border: none;
 }
 
 @media (max-width: 1000px) {
