--- a/style.css
+++ b/style.css
@@ -1,114 +1,116 @@
-@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Oswald:wght@200..700&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&family=Instrument+Serif:ital@0;1&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Outfit", sans-serif;
 }
-
+body {
+    background-color: rgb(255, 255, 255);
+}
 
 img {
     width: 100%;
 }
-.first_page_container .head {
-    padding: 12em 0 0 0;
-}
-.first_page_container .head {
-    height: 60vh;
-    display: flex;
-    /* justify-content: flex-start; */
-    align-items: center;
-    flex-direction: column;
-}
-.first_page_container  h1 {
-    text-align: center;
-    font-size: 4.5em;
-    line-height: 1;
-    width: 60%;
-}
-.first_page_container  p {
-    margin-top: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 40em;
-    text-align: center;
-    font-size: 1.2em;
-    color: rgba(0, 0, 0, 0.671);
-}
-.first_page_container a  {
-    margin-top: 7em;
-    text-decoration: none;
-    font-size: 1em;
-    background-color: rgba(99, 101, 241, 0.877);
-    padding: 1.1em 2.1em;
-    border-radius: 2em;
-    color: white;
-    /* max-width: 20em; */
-    text-align: center;
-}
+.frond-top-BG {
 
-/* second section */
-
-
-.first_page_SECOND__section {
-    text-align: center;
-    
-}
-
-.first_page_SECOND__section .content {
-    display: flex;
-    justify-content: flex-end ;
-    align-items: center;
-    flex-direction: column;
-    height: 30vh;
-}
-.first_page_SECOND__section h1 {
-    font-size: 3em;
-    color: rgba(99, 101, 241, 0.664) ;
-    line-height: .9em;
-    letter-spacing: -0.05em;
-    max-width: 7em;
-    font-weight: 500;
-}
-/* .first_page_SECOND__section p {
-    margin-top: 1em;
-    font-size: 1.5em;
-    max-width: 27em;
-    font-size: 1.2em;
-} */
-
-/*---------------- Third section ----------------*/
-.first_page_Third_section {
-    padding-top: 5em;
-}
-.first_page_Third_section .conteiner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    column-gap: 10em;
-    flex-wrap: wrap;
+    background-image: url(images/bgFrondTop.jpg);
+    background-size: cover;
+    background-position: 100% 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
     width: 100%;
-    
-} 
-.first_page_Third_section .content, .text {
-    width: 30%;
+    z-index: -999;
 }
-.first_page_Third_section img {
+
+
+.top-container {
+    margin-bottom: 10em;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+    padding-left: 10em;
+    row-gap: 2.5em;
+}
+.top-container .top-name {
+    font-size: 3.5em;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+.top-container .top-text {
+    font-size: 1.2em;
+    max-width: 40em;
+    color: rgba(249, 249, 249, 0.691);
+}
+.top-container .button a {
+    text-decoration: none;
+    color: white;
+    
+}
+
+.subtitle{
+    font-size: 1.2em;
+    font-weight: 300;
+    color: white;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    padding: 0 40px;
+    mask-size: 100%;
+    mask-position: center center;
+    mask-image: url(images/download.svg);
+    background-color: red;
+    width: 14em;
+   
+}
+
+
+.front-top-bottom {
+    text-align: center;
+}
+
+
+
+.marginBtm5{
+   margin-bottom: 5em;
+    
+}
+.marginBtm10{
+   margin-bottom: 10em;
+    
+}
+.front-middle-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    column-gap: 10em;
+    row-gap: 2em;
+    flex-wrap: wrap;
+}
+.front-middle-content .sameSpace {
+    width: 30em;
+}
+.front-middle-content  img{
     border-radius: 2em;
-    
 }
-
-.first_page_Third_section h1 {
-    color: rgba(0, 0, 0, 0.671);
-    line-height: 1;
-    margin-bottom: .5em;
+.front-middle-content  h1{
+    line-height: 1.1em;
+    margin-bottom: 1em;
+    padding-left: .6em;
 }
-
-.first_page_Third_section span {
-    font-weight: 600;
+.front-middle-content  p{
+    font-size: 1.2em;
+    color: rgb(0, 0, 0);
+    margin-bottom: 2em;
+    margin-left: 1em;
 }
 
 #reverse {
@@ -118,141 +120,180 @@ img {
     flex-direction: row-reverse;
 }
 
-
-
-
-@media (min-width: 1440px) {
-    .first_page_container  h1 {
-        width: 50%;
-    }
-
-    /* second section */
-
-    /* Third section */
-    
+.middle-container {
+    margin-top: 5em;
+    background-color: #DFDBE5;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.same {
+    max-width: 50em;
+}
+.middle-container .maxW {
+    padding: 10em 10em 0em 0em;
     
 }
+.middle-container .middle-content {
+    display: flex;
+    flex-direction: column;
+    background-color: #DFDBE5;
 
+}
+.middle-container .middle-content h1, p{
+    margin-left: 1em;
+}
+.middle-container .middle-content  .sections {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    flex-wrap: wrap;
+        /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.18'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
 
-
-@media (max-width: 1430px) {
-    .first_page_container  h1 {
-        width: 70%;
-    }
-    
-    
-    /* second section */
-}    
-
-@media (max-width: 1070px) {
-    .first_page_container .head {
-        height: 60vh;
-        margin-bottom: 7em;
-    }
-    .first_page_container  h1 {
-        text-align: center;
-        font-size: 4em;
-        line-height: 1;
-        width: 80%;
-    }
-    
-    /* second section */
-    .first_page_SECOND__section h1 {
-        font-size: 2.8em;
-    }
-    
-    /* Third section */
-    .first_page_Third_section .content, .text {
-        width: 40%;
-    }
-    .first_page_Third_section .conteiner {
-        column-gap: 5em;
-    } 
+}
+.middle-container .middle-content  section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 15em;
 }
 
-@media (max-width: 770px) {
+.middle-container .middle-content  p {
+    max-width: 30em;
+    text-align: justify;
+    margin-bottom: 1em;
+}
+.middle-container .middle-content section  img {
+    width: 30px;
+    padding: 1em 0;
+}
+.middle-container .middle-content section  h2{
+    margin-bottom: .7em;
+}
+.middle-container .middle-content section  p{
+   max-width: 13em;
+}
+.middle-container .middle-content section  .middle-footer {
+    border: 1px solid black;
+    padding: 1.7em;
+    max-width: 13em;
+    text-align: center;
+}
+.middle-container .middle-content section  p{
+    max-width: 13em;
+    text-align: center;
+}
+
+@media (max-width: 990px) {
+    .sidebar {
+    width: 60%;
+    }
+    .hide_under990 {
+        display: none;
+    }
     
-    .first_page_container  h1 {
-        font-size: 3em;
+
+    .frond-top-BG {
+
+    /* background-image: url(images/bgFrondTop2.jpg); */
+    background-position: fixed;
+    background-repeat: no-repeat;    
+    background-size: cover;
+    position: absolute;
+}
+.top-container {
+    padding: 5em;
+}
+
+}
+
+@media (max-width: 600px) {
+    .sidebar {
+    width: 60%;
+    }
+    .hide_under990 {
+        display: none;
     }
 
-    /* second section */
-    .first_page_SECOND__section h1 {
+    .frond-top-BG {
+
+    background-image: url(images/bgFrondTop2.jpg);
+    /* background-position: fixed; */
+    background-repeat: no-repeat;    
+    background-size: cover;
+    background-position-x: -100px;
+    position: absolute;
+   
+   
+    
+    z-index: -999;
+}
+.top-container {
+    padding: 2.5em;
+    .top-name {
         font-size: 2.5em;
     }
-    /* Third section */
-    .first_page_Third_section .content, .text {
-        width: 45%;
-    }
-    .first_page_Third_section .conteiner {
-        column-gap: 2em;
-    } 
-    
 }
-
-@media (max-width: 610px) {
-    
-    .first_page_container  h1 {
-        font-size: 3em;
-        width: 100%;
-    }
-    /* second section */
-    
-}
-
-@media (max-width: 550px) {
-    .first_page_container {
-        padding: 0 .4em;
-    }
-    .first_page_container  h1 {
-        font-size: 3em;
-        width: 10em;
-    }
-
-    /* second section */
-
-    /* Third section */
-    .first_page_Third_section .conteiner {
-        padding: 0 1em;
-        column-gap: 2em;
-    }
-    .first_page_Third_section .content, .text {
-        width: 100%;
-    } 
-    .first_page_Third_section h1 {
-        margin-top: 1em;
+.subtitle{
+    font-size: 1.1em;
+    font-weight: 500;
+    color: white;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    padding: 0 40px;
+    mask-size: 100%;
+    mask-position: center center;
+    mask-image: url(images/download.svg);
+    background-color: red;
+    width: 14em;
+    z-index: -9;
 }
 }
 
-@media (max-width: 475px) {
-    
-    .first_page_container  h1 {
-        font-size: 2.359em;
-        width: 10em;
-    }
-    .first_page_container  p {
-        margin-top: 1.5em;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-width: 30em;
-        text-align: center;
-        font-size: 1.2em;
-    }
-    
-    /* second section */
-   
-    .first_page_SECOND__section h1 {
-        font-size: 2.1em;
-    }
+
+
+.btn {
+  color: red;
+  text-transform: uppercase;
+  text-decoration: none;
+  border: 1px solid red;
+  padding: 10px 20px;
+  font-size: 17px;
+  cursor: pointer;
+  font-weight: bold;
+  background: transparent;
+  position: relative;
+  transition: all 1s;
+  overflow: hidden;
+  width: 250px;
 }
 
-@media (max-width: 375px) {
-    
-    /* second section */
-    .first_page_SECOND__section .content {
-        margin-top: 10em;
-    }
-    
-    
+.btn:hover {
+    color: white;
+}
+
+.btn::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    top: 0;
+  left: -40px;
+  transform: skewX(45deg);
+  background-color: rgb(255, 0, 0);
+  z-index: -1;
+  transition: all 1s;
+}
+
+.btn:hover::before {
+  width: 160%;
+}
+
+.marginLeft1em {
+    margin-left: 1em;
 }
