--- a/CSS/navBarStyle.css
+++ b/CSS/navBarStyle.css
@@ -141,7 +141,8 @@ nav #bookAconsultationBG:hover {
         display: block;
     }
     .sidebar {
-    width: 70%;
+    width: 50%;
+    z-index: 999;
     }
     
     
